# watchmedo

./: API输出格式说明.md  BUGFIX_MEDIA_MODULE.md  FINAL_BUGFIX_SUMMARY.md  README.md  TAURI_MEDIA_SETTINGS_GUIDE.md  package-lock.json  package.json  功能说明.md
.github/workflows/: README.md  main.yml  release.yml
client/: .gitignore  .htaccess  BATTERY_FEATURE.md  CHANGELOG_FOCUSED_DURATION.md  CONTINUOUS_DURATION_EXAMPLE.md  DEPLOYMENT_CHECKLIST.md  GISCUS_COMMENTS.md  HOMEPAGE_CUSTOMIZATION.md  PAGINATION_FEATURE.md  QUICKSTART.md  README.md  REALTIME_DEBUG.md  RESPONSIVE_SIDEBAR.md  SIDEBAR_AND_CHARTS.md  composer.json  index.html  index.php  test_push.php
client/admin/: index.php
client/api/: admin.php  ai.php  devices.php  proxy.php  pull.php  push.php  receive.php  settings.php  stats.php
client/docs/: AUTO_CLEANUP_FEATURE.md  BUGFIX_CONTINUOUS_DURATION.md  CLIENT_CONFIG.md  DURATION_WITH_SECONDS.md  FEATURES.md  MEDIA_PLAYBACK_FEATURE.md  PROJECT_SUMMARY.md  REALTIME_CHARTS_FEATURE.md  REALTIME_DEBUG.md  REALTIME_UPDATE_FIX.md  VIEW_MODE_FEATURE.md
client/includes/: auth.php  config.php  database.php  functions.php
client/install/: migrate_battery.php  migrate_media.php  setup.php
client/public/: device.php  index.php  test_realtime.php
client/public/assets/js/: main.js  (+1 more)
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  media_monitor.rs  remote_push.rs
src/components/layout/: Navbar.tsx  Sidebar.tsx
src/pages/: About.tsx  Dashboard.tsx  Remote.tsx  Settings.tsx
(+1 files in other folders)
