[package]
name = "watchmedo"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open", "dialog-open", "fs-read-file", "fs-write-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.30"
auto-launch = "0.5"
hostname = "0.3"
reqwest = { version = "0.11", features = ["json"] }
image = { version = "0.24", features = ["jpeg"] }
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Storage_Streams",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
